@@ -10,6 +10,9 @@
      client's.
      Also extends the sizes of the remaining 32bit wire format to 64bit,
      they're specified as unsigned long in the standard.
+   - dtucker@cvs.openbsd.org 2008/06/09 13:02:39
+     Extend 32bit -> 64bit values for statvfs extension missed in previous
+     commit.
 
 20080608
  - (dtucker) [configure.ac defines.h sftp-client.c sftp-server.c sftp.c
@@ -4076,4 +4079,4 @@
    OpenServer 6 and add osr5bigcrypt support so when someone migrates
    passwords between UnixWare and OpenServer they will still work. OK dtucker@
 
-$Id: ChangeLog,v 1.4946 2008/06/09 12:49:36 dtucker Exp $
+$Id: ChangeLog,v 1.4947 2008/06/09 13:06:55 dtucker Exp $
